test/results/choice-in-brackets.owltest.stderr
error: unexpected token '|' while parsing grammar

  a = ['a' 'x' | 'y' 'b']
               ~         

